# SpaceInvadersBC

./: .gitignore  README.md  behavioral_cloning.py  collect_demonstrations.py  data_manager.py  env_make.py  evaluate_bc.py  gail_trainer.py  load_minari_dataset.py  main.py  merge_demonstrations.py  pyproject.toml  test_gail_model.py  test_model.py  utils.py
demonstrations/: analyze_demonstrations.py  collect_demonstrations.py  load_minari_dataset.py  merge_demonstrations.py  replay_demonstrations.py
gail/: gail_discriminator.py  gail_trainer.py
plot_results/: plot_histogram.py  plot_histogram_BC.py  plot_histogram_GAIL.py  reward.csv
plot_results/data_training/: reward_BC.csv  reward_GAIL.csv
