[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[atari]>=0.29.0",
    "ale-py>=0.8.0",
    "gymnasium[accept-rom-license]>=0.29.0",
    "pygame>=2.6.1",
    "torch[cuda]==2.6.0+cu124",
    "matplotlib>=3.10.7",
    "minari[all,hf]>=0.5.3",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
